# yosys4gal_win

./: LICENSE  README.md  abc.script  cells_sim.v  flash_minipro.sh  macrocell.v  pla.v  pre_techmap.json  shrink_sop.tcl  synth_gal.tcl  synth_gal.ys  test.v  test.v.old  test_synth.blif  test_synth.json  test_synth.rtlil  test_synth.txt  test_synth.v
GAL_LIB/: synth_gal.tcl
GAL_LIB/extractions/: README.md  ndff.v  tristate.v
GAL_LIB/techmaps/: README.md  olmc_comb.v  one_sop.v  pla.v  pla_olmc_int.v  trivial_1sop_olmc.v  trivial_sop_olmc.v
compiler/: Cargo.toml  README.md
compiler/src/: fitter.rs  lib.rs  main.rs  pcf.rs  yosys_parser.rs
compiler/testcases/json/: synth_olmc_test.json
compiler/tests/: yosys_parser_test.rs
extractions/: macrocells.v  olmc.v
models/: .gitignore  GAL16V8_reg.hex  GAL16V8_reg.v  GAL16V8_reg_tb.v  GAL22V10_reg.v  GAL22V10_reg_tb.v  GAL22V10_wrapper.v  README.md  original.v  prove_equiv.tcl  wrapper.v
techmaps/: README.md  gal_dff.lib  inv_techmap.v  olmc.v  olmc_comb.v  olmc_seq.v  tristate.v  trivial_sop.v  trivial_sop_olmc.v
testcases/: README.md  adder_downto_upto.v  and_gate.pcf  and_gate.v  and_gate_reg.pcf  and_gate_reg.v  big_xor.pcf  big_xor.v  complex_single_sop.pcf  complex_single_sop.v  inout_tristate.pcf  inout_tristate.v  mc14500b.pcf  mc14500b.v  nand_gate.v  olmc_test.pcf  olmc_test.v  reg_tristate.v  test.v  tiny_xor.pcf  tiny_xor.v  tristate.pcf  tristate.v  up_counter.pcf  up_counter_downto.v  up_counter_upto.v
